fix mapFlyer with other country fitBound

--- a/apps/front/package.json
+++ b/apps/front/package.json
@@ -15,10 +15,13 @@
     "@googlemaps/js-api-loader": "^1.16.6",
     "@react-spring/web": "^9.7.3",
     "@reduxjs/toolkit": "^2.2.3",
+    "@turf/boolean-contains": "^6.5.0",
+    "@turf/helpers": "^6.5.0",
     "@turf/turf": "6.5.0",
     "d3-array": "^3.2.4",
     "d3-scale": "^4.0.2",
     "d3-shape": "^3.2.0",
+    "geojson": "^0.5.0",
     "immutable": "5.0.0-beta.5",
     "maplibre-gl": "^4.1.2",
     "maplibre-react-components": "workspace:*",
