--- a/packages/pentatrion-fonts/config-lonlat.json
+++ b/packages/pentatrion-fonts/config-lonlat.json
@@ -785,6 +785,20 @@
       "src": "fontawesome"
     },
     {
+      "uid": "3293396f9658fcdb7703b89fb15bafa8",
+      "css": "locate",
+      "code": 59412,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M500 0A45.5 45.5 0 0 0 454.5 45.5V139.3C290.5 159.9 159.9 290.5 139.3 454.5H45.5A45.5 45.5 0 0 0 0 500 45.5 45.5 0 0 0 45.5 545.5H139.3C159.9 709.5 290.5 840.1 454.5 860.7V954.5A45.5 45.5 0 0 0 500 1000 45.5 45.5 0 0 0 545.5 954.5V860.7C709.5 840.1 840.1 709.5 860.7 545.5H954.5A45.5 45.5 0 0 0 1000 500 45.5 45.5 0 0 0 954.5 454.5H860.7C840.1 290.5 709.5 159.9 545.5 139.3V45.5A45.5 45.5 0 0 0 500 0ZM500 227.3C651.2 227.3 772.7 348.8 772.7 500 772.7 651.2 651.2 772.7 500 772.7 348.8 772.7 227.3 651.2 227.3 500 227.3 348.8 348.8 227.3 500 227.3Z",
+        "width": 1000
+      },
+      "search": [
+        "locate"
+      ]
+    },
+    {
       "uid": "24b7643d8401ffb5bd0872b14261d9ee",
       "css": "climbing-outdoor",
       "code": 59402,
