--- a/packages/pentatrion-fonts/config-geo.json
+++ b/packages/pentatrion-fonts/config-geo.json
@@ -7,48 +7,6 @@
   "ascent": 850,
   "glyphs": [
     {
-      "uid": "9fba9b5d1d4e5d924aa36f6aa65f4431",
-      "css": "circle-disabled",
-      "code": 59417,
-      "src": "custom_icons",
-      "selected": true,
-      "svg": {
-        "path": "M680.4 334.2A330.6 330.6 0 0 1 349.8 664.8 330.6 330.6 0 0 1 19.3 334.2 330.6 330.6 0 0 1 349.8 3.6 330.6 330.6 0 0 1 680.4 334.2Z",
-        "width": 700
-      },
-      "search": [
-        "circle-disabled"
-      ]
-    },
-    {
-      "uid": "83311c1c918e6464b637839f51d4c585",
-      "css": "circle-fill",
-      "code": 59418,
-      "src": "custom_icons",
-      "selected": true,
-      "svg": {
-        "path": "M585.8 334.2A236 236 0 0 1 349.8 570.1 236 236 0 0 1 113.9 334.2 236 236 0 0 1 349.8 98.2 236 236 0 0 1 585.8 334.2Z",
-        "width": 700
-      },
-      "search": [
-        "circle-fill"
-      ]
-    },
-    {
-      "uid": "580ac21b396c4565a6c3086d730aae13",
-      "css": "circle-stroke",
-      "code": 59419,
-      "src": "custom_icons",
-      "selected": true,
-      "svg": {
-        "path": "M349.9 91.2C215.8 91.2 106.9 200.1 106.9 334.2 106.9 468.3 215.8 577.1 349.9 577.1 483.9 577.1 592.8 468.3 592.8 334.2 592.8 200.1 483.9 91.2 349.9 91.2ZM349.9 105.2C476.4 105.2 578.8 207.7 578.8 334.2 578.8 460.7 476.4 563.1 349.9 563.1 223.3 563.1 120.9 460.7 120.9 334.2 120.9 207.7 223.3 105.2 349.9 105.2Z",
-        "width": 700
-      },
-      "search": [
-        "circle-stroke"
-      ]
-    },
-    {
       "uid": "282e3e0a4504350dab5315ca3b0cd056",
       "css": "inactive",
       "code": 59423,
@@ -74,6 +32,48 @@
       },
       "search": [
         "marker"
+      ]
+    },
+    {
+      "uid": "9fba9b5d1d4e5d924aa36f6aa65f4431",
+      "css": "circle-disabled",
+      "code": 59417,
+      "src": "custom_icons",
+      "selected": false,
+      "svg": {
+        "path": "M680.4 334.2A330.6 330.6 0 0 1 349.8 664.8 330.6 330.6 0 0 1 19.3 334.2 330.6 330.6 0 0 1 349.8 3.6 330.6 330.6 0 0 1 680.4 334.2Z",
+        "width": 700
+      },
+      "search": [
+        "circle-disabled"
+      ]
+    },
+    {
+      "uid": "83311c1c918e6464b637839f51d4c585",
+      "css": "circle-fill",
+      "code": 59418,
+      "src": "custom_icons",
+      "selected": false,
+      "svg": {
+        "path": "M585.8 334.2A236 236 0 0 1 349.8 570.1 236 236 0 0 1 113.9 334.2 236 236 0 0 1 349.8 98.2 236 236 0 0 1 585.8 334.2Z",
+        "width": 700
+      },
+      "search": [
+        "circle-fill"
+      ]
+    },
+    {
+      "uid": "580ac21b396c4565a6c3086d730aae13",
+      "css": "circle-stroke",
+      "code": 59419,
+      "src": "custom_icons",
+      "selected": false,
+      "svg": {
+        "path": "M349.9 91.2C215.8 91.2 106.9 200.1 106.9 334.2 106.9 468.3 215.8 577.1 349.9 577.1 483.9 577.1 592.8 468.3 592.8 334.2 592.8 200.1 483.9 91.2 349.9 91.2ZM349.9 105.2C476.4 105.2 578.8 207.7 578.8 334.2 578.8 460.7 476.4 563.1 349.9 563.1 223.3 563.1 120.9 460.7 120.9 334.2 120.9 207.7 223.3 105.2 349.9 105.2Z",
+        "width": 700
+      },
+      "search": [
+        "circle-stroke"
       ]
     }
   ]
