front feature add helpTab

--- a/packages/pentatrion-fonts/config-lonlat.json
+++ b/packages/pentatrion-fonts/config-lonlat.json
@@ -799,6 +799,12 @@
       ]
     },
     {
+      "uid": "3d4ea8a78dc34efe891f3a0f3d961274",
+      "css": "info",
+      "code": 61737,
+      "src": "fontawesome"
+    },
+    {
       "uid": "24b7643d8401ffb5bd0872b14261d9ee",
       "css": "climbing-outdoor",
       "code": 59402,
