add coords searchEngine

--- a/packages/pentatrion-fonts/config-lonlat.json
+++ b/packages/pentatrion-fonts/config-lonlat.json
@@ -811,6 +811,20 @@
       "src": "entypo"
     },
     {
+      "uid": "3c102a0a8bd91969b2f0135191072fe1",
+      "css": "lonlat",
+      "code": 59455,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M498.7 117.5C277.1 117.5 97.3 291.4 97.3 505.6 97.3 719.9 277.1 893.7 498.7 893.7 720.4 893.7 900.2 719.9 900.2 505.6 900.2 291.4 720.4 117.5 498.7 117.5ZM498.7 131.9C712.4 131.9 885.4 299.2 885.4 505.6 885.4 712.1 712.4 879.4 498.7 879.4 285.1 879.4 112.1 712.1 112.1 505.6 112.1 299.2 285.1 131.9 498.7 131.9ZM497 35.7L449 406.7 335.4 321.5 431.7 449.3C35.7 499.3 431.7 449.3 35.7 499.3 414.6 555.1 35.7 499.3 414.6 555.1L327.1 663.4 447.2 574.9 498.5 964.3 552.2 567.2 679.6 661.5 596.1 553.9 964.3 505.2 580.3 453.7 688 316.4 552.9 417Z",
+        "width": 1000
+      },
+      "search": [
+        "lonlat"
+      ]
+    },
+    {
       "uid": "24b7643d8401ffb5bd0872b14261d9ee",
       "css": "climbing-outdoor",
       "code": 59402,
