refactor pentatrion-geo import paths

--- a/packages/pentatrion-design/tsconfig.json
+++ b/packages/pentatrion-design/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "types": ["react/experimental", "@testing-library/jest-dom"],
     "paths": {
+      "~design/*": ["./*"],
       "pentatrion-design": ["."],
       "pentatrion-design/*": ["./*"],
       "@storybook/react": ["../../apps/storybook/node_modules/@storybook/react"],
