--- a/packages/pentatrion-geo/tsconfig.json
+++ b/packages/pentatrion-geo/tsconfig.json
@@ -4,6 +4,8 @@
     "skipLibCheck": true,
     "types": ["google.maps", "react/experimental"],
     "paths": {
+      "~geo/*": ["./src/*"],
+      "~geo": ["./src"],
       "pentatrion-geo": ["."],
       "pentatrion-geo/*": ["./*"],
       "@storybook/react": ["../../apps/storybook/node_modules/@storybook/react"],
