front remove isochrone dependency to search tab

--- a/apps/front/tsconfig.json
+++ b/apps/front/tsconfig.json
@@ -3,7 +3,13 @@
   "compilerOptions": {
     "types": ["react/experimental", "google.maps"],
     "paths": {
-      "~/*": ["./src/*"]
+      "~/*": ["./src/*"],
+      "~design": ["../../packages/pentatrion-design"],
+      "~design/*": ["../../packages/pentatrion-design/*"],
+      "~geo": ["../../packages/pentatrion-geo/src"],
+      "~geo/*": ["../../packages/pentatrion-geo/src/*"],
+      "~mrc": ["../../packages/maplibre-react-components/src"],
+      "~mrc/*": ["../../packages/maplibre-react-components/src/*"]
     }
   },
   "include": ["src"]
