--- a/apps/front/.env
+++ b/apps/front/.env
@@ -1,6 +1,6 @@
 VITE_MAPBOX_TOKEN=
 VITE_IGN_TOKEN_LEGACY=
-VITE_IGN_TOKEN=
+VITE_IGN_TOKEN=ign_scan_ws
 VITE_MAPTILER_TOKEN=
 VITE_GOOGLE_MAPS_API_TOKEN=
 VITE_OPENROUTESERVICE_TOKEN=
