--- a/apps/storybook/package.json
+++ b/apps/storybook/package.json
@@ -33,16 +33,21 @@
     "@storybook/addon-docs": "^8.0.5",
     "@storybook/addon-essentials": "^8.0.5",
     "@storybook/addon-links": "^8.0.5",
+    "@storybook/addon-themes": "^8.0.6",
     "@storybook/blocks": "^8.0.5",
     "@storybook/manager-api": "^8.0.5",
     "@storybook/react": "^8.0.5",
     "@storybook/react-vite": "^8.0.5",
     "@storybook/theming": "^8.0.5",
     "@types/react": "^18.2.74",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "postcss-load-config": "^5.1.0",
     "prop-types": "^15.8.1",
     "react-dom": "^18.2.0",
     "sass": "^1.74.1",
     "storybook": "^8.0.5",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5.4.3",
     "vite": "^5.2.8"
   }
