--- a/packages/pentatrion-design/package.json
+++ b/packages/pentatrion-design/package.json
@@ -24,6 +24,7 @@
         "jsdom": "^24.0.0",
         "maplibre-gl": "^4.1.2",
         "react-redux": "^9.1.0",
+        "tailwindcss": "^3.4.3",
         "typescript": "^5.4.3",
         "vite": "^5.2.8",
         "vitest": "^1.4.0"
