divide storybook in each package

--- a/packages/pentatrion-design/package.json
+++ b/packages/pentatrion-design/package.json
@@ -1,46 +1,63 @@
 {
-    "name": "pentatrion-design",
-    "version": "0.0.1",
-    "private": true,
-    "description": "",
-    "keywords": [],
-    "author": "Hugues Tavernier",
-    "license": "ISC",
-    "main": "index.ts",
-    "scripts": {
-        "test": "vitest",
-        "test:ui": "vitest --ui"
-    },
-    "type": "module",
-    "devDependencies": {
-        "@reduxjs/toolkit": "^2.2.3",
-        "@testing-library/jest-dom": "^6.4.2",
-        "@testing-library/react": "^14.2.2",
-        "@types/geojson": "^7946.0.14",
-        "@types/react": "^18.2.74",
-        "@types/react-dom": "^18.2.24",
-        "@vitejs/plugin-react-swc": "^3.6.0",
-        "@vitest/ui": "^1.4.0",
-        "jsdom": "^24.0.0",
-        "maplibre-gl": "^4.1.2",
-        "react-redux": "^9.1.0",
-        "tailwindcss": "^3.4.3",
-        "typescript": "^5.4.3",
-        "vite": "^5.2.8",
-        "vitest": "^1.4.0"
-    },
-    "dependencies": {
-        "@floating-ui/react": "^0.26.10",
-        "@use-gesture/react": "^10.3.1",
-        "classnames": "^2.5.1",
-        "fuse.js": "^7.0.0",
-        "pentatrion-design": "workspace:*",
-        "pentatrion-fonts": "workspace:*",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-polymorphic-types": "^2.0.0",
-        "react-sortablejs": "^6.1.4",
-        "react-spring": "^9.7.3",
-        "sass": "^1.74.1"
-    }
+  "name": "pentatrion-design",
+  "version": "0.0.1",
+  "private": true,
+  "description": "",
+  "keywords": [],
+  "author": "Hugues Tavernier",
+  "license": "ISC",
+  "main": "index.ts",
+  "scripts": {
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "storybook-dev": "storybook dev -p 6006",
+    "storybook-build": "storybook build"
+  },
+  "type": "module",
+  "devDependencies": {
+    "@reduxjs/toolkit": "^2.2.3",
+    "@storybook/addon-actions": "^8.0.10",
+    "@storybook/addon-docs": "^8.0.10",
+    "@storybook/addon-essentials": "^8.0.10",
+    "@storybook/addon-interactions": "^8.0.10",
+    "@storybook/addon-links": "^8.0.10",
+    "@storybook/addon-themes": "^8.0.10",
+    "@storybook/blocks": "^8.0.10",
+    "@storybook/manager-api": "^8.0.10",
+    "@storybook/react": "^8.0.10",
+    "@storybook/react-vite": "^8.0.10",
+    "@storybook/test": "^8.0.10",
+    "@storybook/theming": "^8.0.10",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.2",
+    "@types/geojson": "^7946.0.14",
+    "@types/react": "^18.2.74",
+    "@types/react-dom": "^18.2.24",
+    "@vitejs/plugin-react-swc": "^3.6.0",
+    "@vitest/ui": "^1.4.0",
+    "jsdom": "^24.0.0",
+    "maplibre-gl": "^4.1.2",
+    "postcss": "^8.4.38",
+    "postcss-load-config": "^5.1.0",
+    "react-redux": "^9.1.0",
+    "storybook": "^8.0.10",
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.4.3",
+    "vite": "^5.2.8",
+    "vitest": "^1.4.0"
+  },
+  "dependencies": {
+    "@floating-ui/react": "^0.26.10",
+    "@use-gesture/react": "^10.3.1",
+    "classnames": "^2.5.1",
+    "fuse.js": "^7.0.0",
+    "pentatrion-design": "workspace:*",
+    "pentatrion-fonts": "workspace:*",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-polymorphic-types": "^2.0.0",
+    "react-sortablejs": "^6.1.4",
+    "react-spring": "^9.7.3",
+    "sass": "^1.74.1"
+  }
 }
