--- a/packages/maplibre-react-components/package.json
+++ b/packages/maplibre-react-components/package.json
@@ -19,13 +19,27 @@
     "dev": "tsup --watch",
     "build": "tsup",
     "test": "vitest",
-    "test:ui": "vitest --ui"
+    "test:ui": "vitest --ui",
+    "storybook-dev": "storybook dev -p 6006",
+    "storybook-build": "storybook build"
   },
   "files": [
     "dist/",
     "src/"
   ],
   "devDependencies": {
+    "@storybook/addon-actions": "^8.0.10",
+    "@storybook/addon-docs": "^8.0.10",
+    "@storybook/addon-essentials": "^8.0.10",
+    "@storybook/addon-interactions": "^8.0.10",
+    "@storybook/addon-links": "^8.0.10",
+    "@storybook/addon-themes": "^8.0.10",
+    "@storybook/blocks": "^8.0.10",
+    "@storybook/manager-api": "^8.0.10",
+    "@storybook/react": "^8.0.10",
+    "@storybook/react-vite": "^8.0.10",
+    "@storybook/test": "^8.0.10",
+    "@storybook/theming": "^8.0.10",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.2",
     "@types/react": "^18.2.74",
@@ -35,8 +49,11 @@
     "jsdom": "^24.0.0",
     "maplibre-gl": "^4.1.2",
     "pentatrion-design": "workspace:*",
+    "postcss": "^8.4.38",
+    "postcss-load-config": "^5.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "storybook": "^8.0.10",
     "tsup": "^8.0.2",
     "typescript": "^5.4.3",
     "vite": "^5.2.8",
