--- a/apps/maplibre-sandbox/package.json
+++ b/apps/maplibre-sandbox/package.json
@@ -35,8 +35,7 @@
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
     "sass": "^1.74.1",
-    "suggestions": "^1.7.1",
-    "turf-extent": "^1.0.4"
+    "suggestions": "^1.7.1"
   },
   "devDependencies": {
     "@types/mapbox__mapbox-gl-draw": "^1.4.6",
