--- a/packages/maplibre-react-components/package.json
+++ b/packages/maplibre-react-components/package.json
@@ -20,7 +20,7 @@
     "build": "tsup",
     "test": "vitest",
     "test:ui": "vitest --ui",
-    "storybook-dev": "storybook dev -p 6006",
+    "storybook": "storybook dev -p 6006",
     "storybook-build": "storybook build"
   },
   "files": [
