--- a/packages/pentatrion-design/package.json
+++ b/packages/pentatrion-design/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "test": "vitest",
     "test:ui": "vitest --ui",
-    "storybook-dev": "storybook dev -p 6006",
+    "storybook": "storybook dev -p 6006",
     "storybook-build": "storybook build"
   },
   "type": "module",
