--- a/packages/pentatrion-geo/package.json
+++ b/packages/pentatrion-geo/package.json
@@ -10,7 +10,7 @@
     "build": "tsup",
     "tsc": "tsc",
     "test": "vitest",
-    "storybook-dev": "storybook dev -p 6006",
+    "storybook": "storybook dev -p 6006",
     "storybook-build": "storybook build"
   },
   "type": "module",
