--- a/packages/pentatrion-design/package.json
+++ b/packages/pentatrion-design/package.json
@@ -15,51 +15,48 @@
   },
   "type": "module",
   "devDependencies": {
-    "@reduxjs/toolkit": "^2.2.3",
-    "@storybook/addon-actions": "^8.0.10",
-    "@storybook/addon-docs": "^8.0.10",
-    "@storybook/addon-essentials": "^8.0.10",
-    "@storybook/addon-interactions": "^8.0.10",
-    "@storybook/addon-links": "^8.0.10",
-    "@storybook/addon-themes": "^8.0.10",
-    "@storybook/blocks": "^8.0.10",
-    "@storybook/manager-api": "^8.0.10",
-    "@storybook/react": "^8.0.10",
-    "@storybook/react-vite": "^8.0.10",
-    "@storybook/test": "^8.0.10",
-    "@storybook/theming": "^8.0.10",
-    "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^14.2.2",
+    "@reduxjs/toolkit": "^2.2.4",
+    "@storybook/addon-actions": "^8.1.0",
+    "@storybook/addon-docs": "^8.1.0",
+    "@storybook/addon-essentials": "^8.1.0",
+    "@storybook/addon-interactions": "^8.1.0",
+    "@storybook/addon-links": "^8.1.0",
+    "@storybook/addon-themes": "^8.1.0",
+    "@storybook/blocks": "^8.1.0",
+    "@storybook/manager-api": "^8.1.0",
+    "@storybook/react": "^8.1.0",
+    "@storybook/react-vite": "^8.1.0",
+    "@storybook/test": "^8.1.0",
+    "@storybook/theming": "^8.1.0",
+    "@testing-library/jest-dom": "^6.4.5",
+    "@testing-library/react": "^14.3.1",
     "@types/geojson": "^7946.0.14",
-    "@types/react": "^18.2.74",
-    "@types/react-dom": "^18.2.24",
+    "@types/react": "^18.3.2",
+    "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.6.0",
-    "@vitest/ui": "^1.4.0",
+    "@vitest/ui": "^1.6.0",
+    "fuse.js": "^7.0.0",
     "jsdom": "^24.0.0",
-    "maplibre-gl": "^4.1.2",
+    "maplibre-gl": "^4.2.0",
     "postcss": "^8.4.38",
     "postcss-load-config": "^5.1.0",
-    "react-redux": "^9.1.0",
-    "storybook": "^8.0.10",
+    "react-redux": "^9.1.2",
+    "storybook": "^8.1.0",
     "tailwindcss": "^3.4.3",
-    "typescript": "^5.4.3",
-    "vite": "^5.2.8",
-    "vitest": "^1.4.0"
+    "typescript": "^5.4.5",
+    "vite": "^5.2.11",
+    "vitest": "^1.6.0"
   },
   "dependencies": {
-    "@floating-ui/react": "^0.26.10",
+    "@floating-ui/react": "^0.26.14",
     "@react-spring/web": "^9.7.3",
     "@use-gesture/react": "^10.3.1",
-    "classnames": "^2.5.1",
     "clsx": "^2.1.1",
-    "fuse.js": "^7.0.0",
-    "pentatrion-design": "workspace:*",
     "pentatrion-fonts": "workspace:*",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-polymorphic-types": "^2.0.0",
     "react-sortablejs": "^6.1.4",
-    "sass": "^1.74.1",
-    "tailwind-merge": "^2.3.0"
+    "sass": "^1.77.1"
   }
 }
