--- a/packages/pentatrion-design/package.json
+++ b/packages/pentatrion-design/package.json
@@ -56,7 +56,6 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-polymorphic-types": "^2.0.0",
-    "react-sortablejs": "^6.1.4",
-    "sass": "^1.77.1"
+    "react-sortablejs": "^6.1.4"
   }
 }
