--- a/packages/pentatrion-design/package.json
+++ b/packages/pentatrion-design/package.json
@@ -8,6 +8,9 @@
   "license": "ISC",
   "main": "index.ts",
   "scripts": {
+    "dev": "tsup --watch",
+    "build": "tsup",
+    "tsc": "tsc",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "storybook": "storybook dev -p 6006",
@@ -15,6 +18,8 @@
   },
   "type": "module",
   "devDependencies": {
+    "@floating-ui/react": "^0.26.14",
+    "@react-spring/web": "^9.7.3",
     "@reduxjs/toolkit": "^2.2.4",
     "@storybook/addon-actions": "^8.1.0",
     "@storybook/addon-docs": "^8.1.0",
@@ -28,34 +33,47 @@
     "@storybook/react-vite": "^8.1.0",
     "@storybook/test": "^8.1.0",
     "@storybook/theming": "^8.1.0",
+    "@storybook/types": "^8.1.0",
     "@testing-library/jest-dom": "^6.4.5",
     "@testing-library/react": "^14.3.1",
     "@types/geojson": "^7946.0.14",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
+    "@use-gesture/react": "^10.3.1",
     "@vitejs/plugin-react-swc": "^3.6.0",
     "@vitest/ui": "^1.6.0",
     "fuse.js": "^7.0.0",
     "jsdom": "^24.0.0",
     "maplibre-gl": "^4.2.0",
+    "pentatrion-fonts": "workspace:*",
     "postcss": "^8.4.38",
     "postcss-load-config": "^5.1.0",
     "react-redux": "^9.1.2",
     "storybook": "^8.1.0",
     "tailwindcss": "^3.4.3",
+    "tsup": "^8.0.2",
     "typescript": "^5.4.5",
     "vite": "^5.2.11",
     "vitest": "^1.6.0"
   },
   "dependencies": {
     "@floating-ui/react": "^0.26.14",
-    "@react-spring/web": "^9.7.3",
-    "@use-gesture/react": "^10.3.1",
-    "clsx": "^2.1.1",
-    "pentatrion-fonts": "workspace:*",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "@floating-ui/react-dom": "^2.0.9",
+    "clsx": "^2.1.0",
+    "react": "^18.0",
+    "react-dom": "^18.0",
     "react-polymorphic-types": "^2.0.0",
     "react-sortablejs": "^6.1.4"
+  },
+  "peerDependencies": {
+    "tailwindcss": "*"
+  },
+  "peerDependenciesMeta": {
+    "@types/react": {
+      "optional": true
+    },
+    "@types/react-dom": {
+      "optional": true
+    }
   }
 }
