--- a/packages/pentatrion-geo/tsconfig.json
+++ b/packages/pentatrion-geo/tsconfig.json
@@ -7,12 +7,12 @@
     "paths": {
       "~geo": ["./src/index.ts"],
       "~geo/*": ["./src/*"],
-      "@storybook/react": ["../../apps/storybook/node_modules/@storybook/react"],
-      "@storybook/addon-actions": ["../../apps/storybook/node_modules/@storybook/addon-actions"],
+      "~design": ["../pentatrion-design/index.ts"],
+      "~design/*": ["../pentatrion-design/*"],
       "@floating-ui/react-dom": ["./node_modules/@floating-ui/react-dom"],
       "@storybook/types": ["./node_modules/@storybook/types"]
     }
   },
-  "exclude": ["**/node_modules"],
+  "exclude": ["**/node_modules", "dist"],
   "include": ["src", ".storybook"]
 }
