--- a/packages/pentatrion-design/tsconfig.json
+++ b/packages/pentatrion-design/tsconfig.json
@@ -9,7 +9,7 @@
       "~design/*": ["./*"]
     }
   },
-  "exclude": ["**/node_modules", "dist"],
+  "exclude": ["**/node_modules", "./dist"],
   "include": [
     "components",
     "hooks",
@@ -18,7 +18,7 @@
     "tests",
     "styles",
     ".storybook",
-    "types.d.ts",
+    "types.ts",
     "tailwind"
   ]
 }
