fix pentatrion-geo declaration alias

--- a/packages/pentatrion-geo/package.json
+++ b/packages/pentatrion-geo/package.json
@@ -4,7 +4,8 @@
   "description": "Extra tools and MapLibre components for geo",
   "author": "Hugues Tavernier",
   "license": "ISC",
-  "main": "src/index.ts",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
     "dev": "tsup --watch",
     "build": "tsup",
