--- a/apps/front/package.json
+++ b/apps/front/package.json
@@ -18,6 +18,7 @@
     "@turf/boolean-contains": "^6.5.0",
     "@turf/helpers": "^6.5.0",
     "@turf/turf": "6.5.0",
+    "clsx": "^2.1.0",
     "d3-array": "^3.2.4",
     "d3-scale": "^4.0.2",
     "d3-shape": "^3.2.0",
@@ -33,7 +34,6 @@
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-sortablejs": "^6.1.4",
-    "sass": "^1.77.1",
     "talkr": "^3.4.0"
   },
   "devDependencies": {
