--- a/packages/maplibre-react-components/tsconfig.json
+++ b/packages/maplibre-react-components/tsconfig.json
@@ -2,11 +2,10 @@
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "types": ["react/experimental", "@testing-library/jest-dom"],
+    "baseUrl": ".",
     "paths": {
-      "~mrc": ["./src"],
-      "@storybook/react": ["../../apps/storybook/node_modules/@storybook/react"],
-      "@storybook/addon-actions": ["../../apps/storybook/node_modules/@storybook/addon-actions"]
+      "~/*": ["./src/*"]
     }
   },
-  "include": ["src", "vite.config.ts", ".storybook"]
+  "include": ["./src", "./vite.config.ts", "./tsup.config.ts", "./env.d.ts", "./.storybook"]
 }
