--- a/packages/pentatrion-design/package.json
+++ b/packages/pentatrion-design/package.json
@@ -8,6 +8,11 @@
   "license": "ISC",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
+  "exports": {
+    ".": "./dist/index.js",
+    "./redux": "./dist/redux/index.js",
+    "./src/*": "./src/*"
+  },
   "scripts": {
     "dev": "tsup --watch",
     "build": "tsup",
@@ -19,7 +24,7 @@
   },
   "type": "module",
   "devDependencies": {
-    "@floating-ui/react": "^0.26.14",
+    "@floating-ui/react-dom": "^2.0.9",
     "@react-spring/web": "^9.7.3",
     "@reduxjs/toolkit": "^2.2.4",
     "@storybook/addon-actions": "^8.1.0",
@@ -59,7 +64,6 @@
   },
   "dependencies": {
     "@floating-ui/react": "^0.26.14",
-    "@floating-ui/react-dom": "^2.0.9",
     "clsx": "^2.1.0",
     "react": "^18.0",
     "react-dom": "^18.0",
@@ -67,6 +71,8 @@
     "react-sortablejs": "^6.1.4"
   },
   "peerDependencies": {
+    "@reduxjs/toolkit": "*",
+    "react-redux": "*",
     "tailwindcss": "*"
   },
   "peerDependenciesMeta": {
