--- a/packages/pentatrion-design/package.json
+++ b/packages/pentatrion-design/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pentatrion-design",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "",
   "keywords": [],
   "author": "Hugues Tavernier",
@@ -21,6 +21,10 @@
     "storybook": "storybook dev -p 6007",
     "storybook-build": "storybook build"
   },
+  "files": [
+    "dist/",
+    "src/tailwind"
+  ],
   "type": "module",
   "devDependencies": {
     "@floating-ui/react-dom": "^2.0.9",
