--- a/packages/pentatrion-design/package.json
+++ b/packages/pentatrion-design/package.json
@@ -45,6 +45,7 @@
     "@storybook/types": "^8.1.0",
     "@testing-library/jest-dom": "^6.4.5",
     "@testing-library/react": "^14.3.1",
+    "@testing-library/user-event": "^14.5.2",
     "@types/geojson": "^7946.0.14",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
