--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,6 @@
 {
+  // https://stackoverflow.com/questions/68163385/parsing-error-cannot-find-module-next-babel
+  "eslint.workingDirectories": [".", "./apps/mrc-doc"],
   "intelephense.files.exclude": [
     "**/.git/**",
     "**/.svn/**",
