--- a/apps/mrc-doc/package.json
+++ b/apps/mrc-doc/package.json
@@ -10,11 +10,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "maplibre-gl": "^4.2.0",
+    "maplibre-react-components": "workspace:^",
     "next": "14.2.3",
+    "pentatrion-design": "workspace:^",
+    "pentatrion-fonts": "workspace:^",
+    "pentatrion-geo": "workspace:^",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@mdx-js/loader": "^3.0.1",
+    "@mdx-js/react": "^3.0.1",
+    "@types/mdx": "^2.0.13",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -22,6 +30,7 @@
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
     "postcss-load-config": "^5.1.0",
+    "rehype-pretty-code": "^0.13.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
