tailwind configuration for monorepo

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -41,5 +41,10 @@
   "[javascriptreact]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-  "tailwindCSS.experimental.configFile": "./packages/pentatrion-geo/tailwind.config.js"
+  "tailwindCSS.experimental.configFile": {
+    "packages/pentatrion-geo/tailwind.config.js": "packages/pentatrion-geo/**",
+    "packages/pentatrion-design/tailwind.config.js": "packages/pentatrion-design/**",
+    "apps/front/tailwind.config.js": "apps/front/**",
+    "apps/sandbox/tailwind.config.js": "apps/sandbox/**"
+  }
 }
