--- a/packages/maplibre-react-components/tsconfig.json
+++ b/packages/maplibre-react-components/tsconfig.json
@@ -7,5 +7,5 @@
       "~/*": ["./src/*"]
     }
   },
-  "include": ["./src", "./vite.config.ts", "./tsup.config.ts", "./env.d.ts", "./.storybook"]
+  "include": ["./src", "./*.ts", "./.storybook"]
 }
