--- a/packages/pentatrion-design/package.json
+++ b/packages/pentatrion-design/package.json
@@ -37,6 +37,7 @@
     "@storybook/test": "^8.1.5",
     "@storybook/theming": "^8.1.5",
     "@storybook/types": "^8.1.5",
+    "@tailwindcss/typography": "^0.5.13",
     "@testing-library/jest-dom": "^6.4.5",
     "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.5.2",
