--- a/.eslintrc
+++ b/.eslintrc
@@ -21,7 +21,13 @@
     "react-refresh/only-export-components": "off",
     "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/ban-ts-comment": "off",
-    "@typescript-eslint/ban-types": "off"
+    "@typescript-eslint/ban-types": "off",
+    "@typescript-eslint/no-unused-vars": [
+      "error",
+      {
+        "varsIgnorePattern": "_"
+      }
+    ]
   },
   "overrides": [
     {
