--- a/apps/mrc-doc/package.json
+++ b/apps/mrc-doc/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@mdx-js/loader": "^3.0.1",
     "@mdx-js/react": "^3.0.1",
+    "@tailwindcss/typography": "^0.5.13",
     "@types/mdx": "^2.0.13",
     "@types/node": "^20.14.2",
     "@types/react": "^18.3.3",
