--- a/packages/maplibre-react-components/package.json
+++ b/packages/maplibre-react-components/package.json
@@ -43,6 +43,7 @@
     "@storybook/theming": "^8.1.5",
     "@testing-library/jest-dom": "^6.4.5",
     "@testing-library/react": "^16.0.0",
+    "@types/geojson": "^7946.0.14",
     "@types/offscreencanvas": "^2019.7.3",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
@@ -50,6 +51,7 @@
     "@vitest/ui": "^1.6.0",
     "canvas": "~2.10",
     "jsdom": "^22.1.0",
+    "msw": "^2.3.1",
     "pentatrion-design": "workspace:*",
     "postcss": "^8.4.38",
     "postcss-load-config": "^5.1.0",
