--- a/packages/pentatrion-design/package.json
+++ b/packages/pentatrion-design/package.json
@@ -21,6 +21,7 @@
   ],
   "type": "module",
   "devDependencies": {
+    "@babel/core": "^7.24.7",
     "@floating-ui/react-dom": "^2.1.0",
     "@react-spring/web": "^9.7.3",
     "@reduxjs/toolkit": "^2.2.5",
@@ -39,7 +40,7 @@
     "@storybook/types": "^8.1.5",
     "@tailwindcss/typography": "^0.5.13",
     "@testing-library/jest-dom": "^6.4.5",
-    "@testing-library/react": "^16.0.0",
+    "@testing-library/react": "^15.0.0",
     "@testing-library/user-event": "^14.5.2",
     "@types/geojson": "^7946.0.14",
     "@types/react": "^18.3.3",
@@ -53,6 +54,7 @@
     "pentatrion-fonts": "workspace:*",
     "postcss": "^8.4.38",
     "postcss-load-config": "^5.1.0",
+    "prettier-plugin-tailwindcss": "^0.6.2",
     "react-redux": "^9.1.2",
     "storybook": "^8.1.5",
     "tailwindcss": "^3.4.3",
