--- a/apps/front/package.json
+++ b/apps/front/package.json
@@ -47,6 +47,7 @@
     "@vitejs/plugin-react-swc": "^3.7.0",
     "postcss": "^8.4.38",
     "postcss-load-config": "^5.1.0",
+    "prettier-plugin-tailwindcss": "^0.6.2",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5",
     "unplugin-inject-preload": "^2.0.3",
