--- a/apps/mrc-doc/package.json
+++ b/apps/mrc-doc/package.json
@@ -31,6 +31,7 @@
     "eslint-config-next": "14.2.3",
     "postcss": "^8.4.38",
     "postcss-load-config": "^5.1.0",
+    "prettier-plugin-tailwindcss": "^0.6.2",
     "rehype-pretty-code": "^0.13.2",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
