--- a/apps/sandbox/package.json
+++ b/apps/sandbox/package.json
@@ -43,9 +43,9 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.7.0",
-    "eslint-plugin-tailwind": "^0.2.1",
     "postcss": "^8.4.38",
     "postcss-load-config": "^5.1.0",
+    "prettier-plugin-tailwindcss": "^0.6.2",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5",
     "vite": "^5.2.12"
