--- a/packages/pentatrion-geo/package.json
+++ b/packages/pentatrion-geo/package.json
@@ -15,6 +15,7 @@
   },
   "type": "module",
   "devDependencies": {
+    "@babel/core": "^7.24.7",
     "@floating-ui/react-dom": "^2.1.0",
     "@storybook/addon-actions": "^8.1.5",
     "@storybook/addon-docs": "^8.1.5",
@@ -30,7 +31,7 @@
     "@storybook/theming": "^8.1.5",
     "@storybook/types": "^8.1.5",
     "@testing-library/jest-dom": "^6.4.5",
-    "@testing-library/react": "^16.0.0",
+    "@testing-library/react": "^15.0.0",
     "@types/geojson": "^7946.0.14",
     "@types/google.maps": "^3.55.9",
     "@types/mapbox__point-geometry": "^0.1.4",
@@ -40,6 +41,7 @@
     "pentatrion-fonts": "workspace:^",
     "postcss": "^8.4.38",
     "postcss-load-config": "^5.1.0",
+    "prettier-plugin-tailwindcss": "^0.6.2",
     "storybook": "^8.1.5",
     "tailwindcss": "^3.4.3",
     "tsup": "^8.1.0",
