--- a/apps/sandbox/package.json
+++ b/apps/sandbox/package.json
@@ -1,54 +1,57 @@
 {
-  "name": "maplibre-react-components-sandbox",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build-with-tsc": "tsc && vite build",
-    "build": "vite build",
-    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@floating-ui/react": "^0.26.16",
-    "@googlemaps/js-api-loader": "^1.16.6",
-    "@react-spring/web": "^9.7.3",
-    "@reduxjs/toolkit": "^2.2.5",
-    "@turf/turf": "6.5.0",
-    "clsx": "^2.1.1",
-    "d3-array": "^3.2.4",
-    "d3-scale": "^4.0.2",
-    "d3-shape": "^3.2.0",
-    "immutable": "5.0.0-beta.5",
-    "maplibre-gl": "^4.3.2",
-    "maplibre-react-components": "workspace:*",
-    "nanoid": "^5.0.7",
-    "pentatrion-design": "workspace:*",
-    "pentatrion-fonts": "workspace:^",
-    "pentatrion-geo": "workspace:*",
-    "proj4": "^2.11.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-redux": "^9.1.2",
-    "react-sortablejs": "^6.1.4",
-    "sass": "^1.77.4"
-  },
-  "devDependencies": {
-    "@types/d3-array": "^3.2.1",
-    "@types/d3-scale": "^4.0.8",
-    "@types/d3-shape": "^3.1.6",
-    "@types/geojson": "^7946.0.14",
-    "@types/google.maps": "^3.55.9",
-    "@types/proj4": "^2.5.5",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react-swc": "^3.7.0",
-    "postcss": "^8.4.38",
-    "postcss-load-config": "^5.1.0",
-    "prettier-plugin-tailwindcss": "^0.6.2",
-    "tailwindcss": "^3.4.3",
-    "typescript": "^5.4.5",
-    "vite": "^5.2.12"
-  }
+    "name": "maplibre-react-components-sandbox",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "tsc": "tsc",
+        "build-with-tsc": "tsc && vite build",
+        "build": "vite build",
+        "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+        "preview": "vite preview"
+    },
+    "dependencies": {
+        "@floating-ui/react": "^0.26.16",
+        "@googlemaps/js-api-loader": "^1.16.6",
+        "@react-spring/web": "^9.7.3",
+        "@reduxjs/toolkit": "^2.2.5",
+        "@turf/turf": "6.5.0",
+        "clsx": "^2.1.1",
+        "d3-array": "^3.2.4",
+        "d3-scale": "^4.0.2",
+        "d3-shape": "^3.2.0",
+        "immutable": "5.0.0-beta.5",
+        "maplibre-gl": "^4.3.2",
+        "maplibre-react-components": "workspace:*",
+        "nanoid": "^5.0.7",
+        "pentatrion-design": "workspace:*",
+        "pentatrion-fonts": "workspace:^",
+        "pentatrion-geo": "workspace:*",
+        "proj4": "^2.11.0",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
+        "react-redux": "^9.1.2",
+        "react-sortablejs": "^6.1.4",
+        "sass": "^1.77.4"
+    },
+    "devDependencies": {
+        "@mapbox/point-geometry": "^0.1.0",
+        "@types/d3-array": "^3.2.1",
+        "@types/d3-scale": "^4.0.8",
+        "@types/d3-shape": "^3.1.6",
+        "@types/geojson": "^7946.0.14",
+        "@types/google.maps": "^3.55.9",
+        "@types/mapbox__point-geometry": "^0.1.4",
+        "@types/proj4": "^2.5.5",
+        "@types/react": "^18.3.3",
+        "@types/react-dom": "^18.3.0",
+        "@vitejs/plugin-react-swc": "^3.7.0",
+        "postcss": "^8.4.38",
+        "postcss-load-config": "^5.1.0",
+        "prettier-plugin-tailwindcss": "^0.6.2",
+        "tailwindcss": "^3.4.3",
+        "typescript": "^5.4.5",
+        "vite": "^5.2.12"
+    }
 }
