--- a/apps/mrc-doc/package.json
+++ b/apps/mrc-doc/package.json
@@ -10,6 +10,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@floating-ui/react": "^0.26.16",
+    "clsx": "^2.1.1",
     "maplibre-gl": "^4.3.2",
     "maplibre-react-components": "workspace:^",
     "next": "14.2.3",
