--- a/apps/mrc-doc/package.json
+++ b/apps/mrc-doc/package.json
@@ -15,6 +15,7 @@
     "maplibre-gl": "^4.3.2",
     "maplibre-react-components": "workspace:^",
     "next": "14.2.3",
+    "nprogress": "^0.2.0",
     "pentatrion-design": "workspace:^",
     "pentatrion-geo": "workspace:^",
     "react": "^18.3.1",
@@ -26,6 +27,7 @@
     "@tailwindcss/typography": "^0.5.13",
     "@types/mdx": "^2.0.13",
     "@types/node": "^20.14.2",
+    "@types/nprogress": "^0.2.3",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "eslint": "^8.57.0",
