--- a/apps/mrc-doc/package.json
+++ b/apps/mrc-doc/package.json
@@ -36,7 +36,9 @@
     "postcss-load-config": "^5.1.0",
     "prettier-plugin-tailwindcss": "^0.6.2",
     "rehype-pretty-code": "^0.13.2",
+    "shiki": "^1.6.4",
     "tailwindcss": "^3.4.3",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "usehooks-ts": "^3.1.0"
   }
 }
