--- a/apps/mrc-doc/package.json
+++ b/apps/mrc-doc/package.json
@@ -10,9 +10,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@floating-ui/react": "^0.26.16",
+    "@floating-ui/react": "^0.26.17",
     "clsx": "^2.1.1",
-    "maplibre-gl": "^4.3.2",
+    "maplibre-gl": "^4.4.0",
     "maplibre-react-components": "workspace:^",
     "next": "14.2.3",
     "nprogress": "^0.2.0",
@@ -25,6 +25,7 @@
     "@mdx-js/loader": "^3.0.1",
     "@mdx-js/react": "^3.0.1",
     "@tailwindcss/typography": "^0.5.13",
+    "@types/geojson": "^7946.0.14",
     "@types/mdx": "^2.0.13",
     "@types/node": "^20.14.2",
     "@types/nprogress": "^0.2.3",
@@ -34,10 +35,11 @@
     "eslint-config-next": "14.2.3",
     "postcss": "^8.4.38",
     "postcss-load-config": "^5.1.0",
-    "prettier-plugin-tailwindcss": "^0.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.4",
     "rehype-pretty-code": "^0.13.2",
-    "shiki": "^1.6.4",
-    "tailwindcss": "^3.4.3",
+    "rehype-slug": "^6.0.0",
+    "shiki": "^1.6.5",
+    "tailwindcss": "^3.4.4",
     "typescript": "^5.4.5",
     "usehooks-ts": "^3.1.0"
   }
